@@ -20,6 +20,22 @@ Based on `extNeuronDB.dat` file, add 'me_combo' to existing MVD3.
 MVD3 is expected to have the following properties already assigned:
  - 'layer', 'mtype', 'etype'
 
+
+# `brainbuilder cells positions_and_orientations`
+
+Based on:
+ - volumetric density nrrd files (a.k.a density fields)
+ - the orientation nrrd file.
+ - the annotation nrrd file.
+
+ The output sonata file also contains the region identifier of each cell.
+ This is why the annotation nrrd file is part of the input.
+
+ The output sonata file is to be consumed by:
+ - the BBP web Cell Atlas (https://bbpcode.epfl.ch/code/#/admin/projects/nexus/cell-atlas)
+ - the point neuron whole brain workflow
+    (https://bbpcode.epfl.ch/code/#/admin/projects/bbpnr/genBrain)
+
 """
 
 import logging
@@ -28,7 +44,8 @@ import numbers
 import os
 
 from collections.abc import Mapping
-
+from pathlib import Path
+import tempfile
 import click
 import numpy as np
 import pandas as pd
@@ -39,8 +56,10 @@ from voxcell.nexus.voxelbrain import Atlas
 
 from brainbuilder import BrainBuilderError
 from brainbuilder.cell_positions import create_cell_positions
+from brainbuilder.utils.sonata.curate import merge_h5_files
 from brainbuilder.utils import bbp
 
+from brainbuilder.app._utils import REQUIRED_PATH
 L = logging.getLogger('brainbuilder')
 
 
@@ -445,3 +464,207 @@ def assign_emodels2(cells_path, emodels, threshold_current, holding_current,
         # must be biophysical here as a emodel/me_combo is provided
         result.properties['model_type'] = "biophysical"
         result.save(out_cells_path)
+
+
+@app.command(short_help='Generate cell positions and save them together with orientations'
+                        ' and region annotations')
+@click.option(
+    '--annotation-path',
+    type=REQUIRED_PATH,
+    required=True,
+    help='Path to the whole mouse brain annotation file (nrrd).',
+)
+@click.option(
+    '--orientation-path',
+    type=REQUIRED_PATH,
+    required=True,
+    help='Path to the whole mouse brain orientation file (nrrd). '
+    'Quaternion field whose underlying array is of type float and of shape (W, H, D, 4) where '
+    'quaternions under the format [w, x, y, z]. The value w is the real part of the quaternion '
+    'while xi + yj + zk is the imaginary part. The direction vector of a cell is assumed to be '
+    'given by q.rotate([0, 1, 0]) where q is the quaternion assigned to the cell voxel.',
+)
+@click.option(
+    '--config-path',
+    type=REQUIRED_PATH,
+    required=True,
+    help=(
+        'Path to the densities configuration file (yaml).'
+        ' This file indicates which cell densities are used to generate cell positions.'
+        ' It contains the paths to the density volumes (a.k.a as density fields).'
+        '\n'
+        ' Configuration example:'
+        ' inputDensityVolumePath:'
+        '   inhibitory neuron: "inhibitory_neuron_density.nrrd"'
+        '   excitatory neuron: "excitatory_neuron_density.nrrd"'
+        '   oligodendrocyte: "oligodendrocyte_density.nrrd"'
+        '   astrocyte: "astrocyte_density.nrrd"'
+        '   microglia: "microglia_density.nrrd"'
+        '\n'
+        'A density file holds an array of type double and of shape (W, H, D) '
+        'with non-negative entries. A density value is a number of cells per voxel.'
+    ),
+)
+@click.option(
+    '--output-path',
+    type=click.Path(file_okay=False, dir_okay=False, resolve_path=True),
+    required=True,
+    help='Path where to write the cell positions and orientations (a single sonata .h5 file).',
+)
+def positions_and_orientations(
+    annotation_path, orientation_path, config_path, output_path
+):
+    """Generate 3D cell positions and store the corresponding cell orientations.\n
+
+    See https://bbpteam.epfl.ch/project/issues/browse/BBPP82-499 for the full context.
+
+    The output is a single sonata file to be consumed by:
+    - the BBP web Cell Atlas (https://bbpcode.epfl.ch/code/#/admin/projects/nexus/cell-atlas)
+    - the point neuron whole brain workflow
+
+    Cell positions of the form (x, y, z) are generated by means of an acceptance-rejection method
+    based on prescribed cell densities.
+    The algorithm is described in the section "Computing Cell Positions" of
+    "A Cell Atlas for the Mouse Brain" by C. Eroe et al. (2018),
+    https://www.frontiersin.org/articles/10.3389/fninf.2018.00084/full.
+    See np.random.choice and its p parameter for its implementation:
+    https://docs.scipy.org/doc//numpy-1.10.4/reference/generated/numpy.random.choice.html\n
+
+
+    The inputs are:
+    - volumetric density nrrd files (a.k.a density fields) of the following cell types:
+        * inhibitory neurons
+        * excitatory neurons
+        * astrocytes
+        * microglia
+        * oligodendrocytes
+        These datasets are non-negative arrays of type double and of shape (W, H, D). Density is
+        expressed a number of cells per voxel. These files are specified by means of yaml
+        configuration, see `config_path` doc.
+    - the orientation nrrd file. This file holds a float32 array of shape (W, H, D, 4) with
+        quaternions of the form [w, x, y, z] on the last axis.
+    - the annotation nrrd file. This file holds uint32 array of shape (W, H, D) where voxels are
+    labeled with the AIBS Structure IDs, a.k.a region identifiers.
+
+    The output sonata file also contains the region identifier of each cell.
+    This is why the annotation nrrd file is part of the input.
+
+    The output sonata file is to be consumed by:
+    - the BBP web Cell Atlas (https://bbpcode.epfl.ch/code/#/admin/projects/nexus/cell-atlas)
+    - the point neuron whole brain workflow
+    (https://bbpcode.epfl.ch/code/#/admin/projects/bbpnr/genBrain)
+
+    The output sonata file contains as many cell collections as input density files.
+    The format of each individual collection is the sonata format of voxcell.CellCollection.
+    Each cell collection is identified by a population name and stores the 3D cell positions
+    and orientations of a given cell type together with the cell region identifiers
+    (AIBS Structure IDs).
+
+    Positions are stored by means of 3 datasets named 'x', 'y' and 'z'. Each is a float32 array
+    of shape (N,) where N is the number of cells of a given cell type in the mouse brain.\n
+
+    Orientations are stored by means of 4 datasets named 'orientation_x', 'orientation_y',
+    'orientation_z' and 'orientation_w'. Each dataset is a float32 array of shape (N,).
+    Input quaternions are assumed to be encoded by 4D vectors of the form [w, x, y, z].
+    The cell direction vector associated to a quaternion q is by convention q.rotate([0, 1, 0]).\n
+
+    Region identifiers are stored by means of a dataset named 'region_id'. This is a uint32 array
+    of shape (N, ).
+
+    The output 3D coordinates are expressed within the 3D orthonormal frame associated with the
+    annotated volume. Hence coordinates take the voxel dimensions and the offset of the annotated
+    volume into account. Coordinates expressed in um. The voxel dimensions and the offsets of the
+    input density files specified in `config_path` are assumed to coincide with the voxel
+    dimensions and the offset of the annotated volume.\n
+
+    How to read the output file:
+        import h5py
+        cell_collections = h5py.File('positions_and_orientations.h5', 'r')
+        astrocyte_orientation_x = cell_collections.get('/nodes/astrocyte/0/orientation_x')[()]
+        oligodendrocyte_position_y = cell_collections.get('/nodes/oligodendrocyte/0/y')[()]
+        astrocyte_region_ids = cell_collections.get('/nodes/astrocyte/0/region_id')[()]
+    """
+    # pylint: disable=too-many-arguments, too-many-locals
+    L.info('Loading density configuration file %s ...', config_path)
+    config = yaml.load(open(config_path), Loader=yaml.SafeLoader)
+    L.info('Loading annotation file %s ...', annotation_path)
+    annotation = VoxelData.load_nrrd(annotation_path)
+    L.info('Loading orientation file %s ...', orientation_path)
+    orientation = VoxelData.load_nrrd(orientation_path)
+
+    assert np.allclose(
+        annotation.offset, orientation.offset
+    ), 'The annotation and orientation files have different offsets.'
+    assert np.allclose(
+        annotation.voxel_dimensions, orientation.voxel_dimensions
+    ), 'The annotation and orientation files have different voxel dimensions.'
+
+    # For each cell type, a voxcell.CellCollection is created and saved to a temporary hdf5 file.
+    # We use a dict to hold the names and the paths of the cell collections to be merged into a
+    # single sonata file.
+    files = dict()
+    with tempfile.TemporaryDirectory() as tmp_dir:
+        tmp_dir = Path(tmp_dir)
+        for (cell_type, density_path) in config['inputDensityVolumePath'].items():
+            L.info('Loading density file %s ...', density_path)
+            density_voxel_data = VoxelData.load_nrrd(density_path)
+            if not np.allclose(density_voxel_data.offset, annotation.offset):
+                raise BrainBuilderError(
+                    f'The input density file {density_path} and the input annotation file '
+                    f'{annotation_path} have different offsets: '
+                    f'{density_voxel_data.offset} != {annotation.offset}'
+                )
+            if not np.allclose(
+                density_voxel_data.voxel_dimensions, annotation.voxel_dimensions
+            ):
+                raise BrainBuilderError(
+                    f'The input density file {density_path} and the input annotation file '
+                    f'{annotation_path} have different voxel dimensions: '
+                    f'{density_voxel_data.voxel_dimensions} != {annotation.voxel_dimensions}'
+                )
+            L.info('Creating positions for the %s population', cell_type)
+            positions = create_cell_positions(density_voxel_data, seed=0)
+            L.info('Retrieving voxel indices ...')
+            voxel_indices = annotation.positions_to_indices(positions)
+            voxel_indices = tuple(voxel_indices.T)
+            region_ids = annotation.raw[voxel_indices]
+            region_ids = region_ids.reshape(region_ids.shape + (1,))
+            L.info(
+                'Creation of the cell collection dataframe.'
+                ' \n Setting positions, orientations and region ids ...'
+            )
+            datasets = np.hstack(
+                [
+                    positions,
+                    orientation.raw[voxel_indices],
+                    region_ids,
+                ]
+            )
+            df = pd.DataFrame(
+                datasets,
+                columns=[
+                    'x',
+                    'y',
+                    'z',
+                    # We assume quaternions to be under the form [w, x, y, z]
+                    'orientation_w',
+                    'orientation_x',
+                    'orientation_y',
+                    'orientation_z',
+                    'region_id',
+                ],
+            )
+            df.index = 1 + np.arange(len(df))  # CellCollection has a 1-based index
+            L.info('Building a CellCollection for the %s population ...', cell_type)
+            cells = CellCollection.from_dataframe(df)
+            cells.population_name = cell_type
+            cells_path = tmp_dir / density_path.replace('.nrrd', '.h5')
+            files[cells_path] = [cell_type]
+            L.info('Saving %s to sonata format ...', cells_path)
+            cells.save_sonata(cells_path)
+
+        L.info(
+            'Merging all CellCollections into a single sonata hdf5 file: %s ...',
+            output_path,
+        )
+        merge_h5_files(files, 'nodes', output_path)
