@@ -1,2 +1,2 @@
 """brainbuilder version"""
-VERSION = '0.15.0.dev1'
+VERSION = '0.15.0.dev2'
